force-app/main/default/objects/Log__c/fields/Context__c.field-meta.xml
<CustomField>
    <fullName>Context__c</fullName>
    <label>Context (JSON)</label>
    <description>Optional JSON-serialised key/value blob with additional context for the log entry (request parameters, intermediate variable values, etc.). Free-form to keep the field useful as the application evolves; consumers parse defensively.</description>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>