force-app/main/default/objects/Log__c/fields/IsBatch__c.field-meta.xml
<CustomField>
    <fullName>IsBatch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsBatch</label>
    <type>Checkbox</type>
</CustomField>