force-app/main/default/objects/Log__c/fields/Logged_At__c.field-meta.xml
<CustomField>
    <fullName>Logged_At__c</fullName>
    <label>Logged At</label>
    <description>Datetime the event was logged. Stamped by Logger when the entry is added to the buffer (NOT when the buffer is flushed) so chronological ordering reflects when the event happened, not when DML committed.</description>
    <required>true</required>
    <type>DateTime</type>
</CustomField>