force-app/main/default/objects/Log__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <label>Message</label>
    <description>Free-text description of the logged event. Truncated to 32768 characters by the Logger Apex class.</description>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>