force-app/main/default/objects/Log__c/fields/Related_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Related_Record_Id__c</fullName>
    <label>Related Record Id</label>
    <description>Optional Salesforce ID the log entry pertains to. Cross-object: stored as text rather than as a polymorphic lookup so any sObject can be referenced. Operators can navigate to the record by appending the Id to the org's base URL.</description>
    <length>18</length>
    <type>Text</type>
</CustomField>