force-app/main/default/objects/Log__c/fields/ReplayID__c.field-meta.xml
<CustomField>
    <fullName>ReplayID__c</fullName>
    <label>ReplayID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>