force-app/main/default/objects/Log__c/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <label>Severity</label>
    <description>Log severity level. ERROR and CRITICAL warrant operator attention; WARN is recoverable; INFO/DEBUG are informational.</description>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DEBUG</fullName>
            </value>
            <value>
                <fullName>INFO</fullName>
                <default>true</default>
                <label>INFO</label>
            </value>
            <value>
                <fullName>WARN</fullName>
            </value>
            <value>
                <fullName>ERROR</fullName>
            </value>
            <value>
                <fullName>CRITICAL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>