force-app/main/default/objects/Log__c/fields/Source_Class__c.field-meta.xml
<CustomField>
    <fullName>Source_Class__c</fullName>
    <label>Source Class</label>
    <description>The Apex class that emitted the log entry. Populated from the dotted source argument passed to Logger (left of the dot).</description>
    <length>80</length>
    <type>Text</type>
</CustomField>