force-app/main/default/objects/Log__c/fields/Source_Method__c.field-meta.xml
<CustomField>
    <fullName>Source_Method__c</fullName>
    <label>Source Method</label>
    <description>The Apex method that emitted the log entry. Populated from the dotted source argument passed to Logger (right of the dot).</description>
    <length>80</length>
    <type>Text</type>
</CustomField>