force-app/main/default/objects/Log__c/fields/Stack_Trace__c.field-meta.xml
<CustomField>
    <fullName>Stack_Trace__c</fullName>
    <label>Stack Trace</label>
    <description>Apex stack trace, captured from Exception.getStackTraceString() when the log entry is associated with a thrown exception.</description>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>