force-app/main/default/objects/Log__c/fields/TriggerBypass__c.field-meta.xml
<CustomField>
    <fullName>TriggerBypass__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TriggerBypass</label>
    <type>Checkbox</type>
</CustomField>